--- a/starter-code/css/style.css
+++ b/starter-code/css/style.css
@@ -1,4 +1,4 @@
-body h1,h2,h3,p {
+body,h1,h2,h3,p {
 	text-align: center;
 }
 
@@ -47,12 +47,17 @@ h2 {
 	border: black 1px solid;
 	background-color: yellow;
 	border-radius: 10px;
-	margin: 8%;
+	margin: 10%;
 	float: left;
 }
 
 .name {
 	color: #ff0000;
+}
+
+img {
+	height: 200px;
+	width: 150px;
 }
 
 footer {
