--- a/starter-code/css/style.css
+++ b/starter-code/css/style.css
@@ -2,6 +2,10 @@ body,h1,h2,h3,p {
 	text-align: center;
 }
 
+body {
+	background-color: #29C7FF;
+}
+
 nav {
 	background-color: #808080;
 }
@@ -14,7 +18,7 @@ nav a {
 	float: left;
 }
 
-a:hover {
+nav a:hover {
 	background-color: #ee5f3c;
 }
 
@@ -60,6 +64,11 @@ img {
 	width: 150px;
 }
 
+.again {
+	text-decoration: none;
+}
+
 footer {
 	background-color: #808080;
+	padding: 5px;
 }
